# hogwarts-logger

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/csr_utils/path_logger/: path_logger.py  pycharm_formatter.py  time_interval_filter.py
src/hogwarts_logger/: __init__.py
src/hogwarts_logger/core/: logger.py  pycharm_formatter.py
src/hogwarts_logger/tests/: test_log_name.py  test_path_log.py
